--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,26 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif"
+            android:textSize="24sp"
+            android:textColor="@color/textColor"
+            android:text="@string/instructions_textView"/>
+
+        <TextView
+            android:text="@string/question1_textView"
+            style="@style/questionTextViewStyle"/>
+
+        <TextView
+            android:text="@string/question2_textView"
+            style="@style/questionTextViewStyle"/>
+
+        <TextView
+            android:text="@string/question3_textView"
+            style="@style/questionTextViewStyle"/>
+
+        <TextView
+            android:text="@string/question4_textView"
+            style="@style/questionTextViewStyle"/>
     </LinearLayout>
 </ScrollView>
