Add java code for checkAnswerFour()

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,6 +118,7 @@
             android:text="@string/question4_textView"/>
 
         <EditText
+            android:id="@+id/q4_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_answer_here"/>
