--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,19 +9,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:fontFamily="sans-serif"
+            android:padding="16dp"
+            android:background="@color/colorPrimaryLight"
             android:text="@string/instructions_textView"
-            android:textColor="@color/textColor"
+            android:textColor="@color/instructionTextColor"
             android:textSize="24sp"/>
 
         <TextView
@@ -122,6 +120,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textNoSuggestions"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:imeOptions="actionDone"
             android:hint="@string/enter_answer_here"/>
 
@@ -129,6 +129,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="32dp"
             android:onClick="submitAnswers"
             android:text="@string/button_text" />
     </LinearLayout>
