--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:layout_margin">16sp</item>
         <item name="android:textColor">@color/textColor</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:fontFamily">roboto</item>
     </style>
 
     <style name="grayLineStyle">
@@ -24,13 +25,13 @@
         <item name="android:layout_marginLeft">56dp</item>
         <item name="android:layout_marginRight">56dp</item>
         <item name="android:layout_marginTop">16dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
     </style>
 
     <style name="optionStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:fontFamily">roboto</item>
     </style>
 
 </resources>
