--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorPrimaryLight">#BBBBBB</color>
-    <color name="textColor">#000000</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorPrimaryDark">#E64A19</color>
+    <color name="colorAccent">#448AFF</color>
+    <color name="colorPrimaryLight">#FFCCBC</color>
+    <color name="lineColor">#BDBDBD</color>
+    <color name="textColor">#212121</color>
+    <color name="optionTextColor">#757575</color>
     <color name="instructionTextColor">#FFFFFF</color>
 </resources>
