--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
     <style name="grayLineStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">@android:color/darker_gray</item>
+        <item name="android:background">@color/lineColor</item>
         <item name="android:layout_marginLeft">56dp</item>
         <item name="android:layout_marginRight">56dp</item>
         <item name="android:layout_marginTop">16dp</item>
@@ -31,6 +31,8 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:fontFamily">roboto</item>
     </style>
 
